tests/PHPStan/DependencyInjection/invalidIgnoreErrors/path-and-paths.neon
parameters:
	ignoreErrors:
		-
			path: ../IgnoreErrorsTest.php
			paths: [../IgnoreErrorsTest.php]
